plasma/packagestructure: don't require mainscript

Plasma KPackages require a main.qml mainscript file. Kpackages with a
rootpath to a KPlugin plasmoid don't have such a file, so their metadata
is invalid. If there's no other candidate, all this does is create a
misleading runtime error, but everything works normally. If there's
another candidate, it will prefer that over the KPackage's metadata file
even if it fails worse. This can leave widgets completely broken.

Instead, don't require a mainscript for KPackages. It's not actually
required because in some circumstances it works perfectly fine without.
And in the cases where it is required (KPackage with no rootPath to a
KPlugin plasmoid), nothing terribly bad seems to happen if it's not
there - the widget obviously won't work, but we get an error message and
everything else is fine.

BUG: 521247